Revision history for {{$dist->name}}

{{$NEXT}}

2.200008  2014-07-02 19:24:59-04:00 America/New_York
        - fix a busted link
        - be more consistent in exception-throwing on missing packages
        - fix a dumb test that failed in a git checkout

2.200007  2014-01-29 21:04:25-05:00 America/New_York
        - throw an exception when a bundle reports an impossible situation,
          like { value => [] }; https://github.com/rjbs/Config-MVP/issues/5

2.200006  2013-09-17 08:58:53 Asia/Tokyo
        - fix repository data

2.200005  2013-09-17 08:56:36 Asia/Tokyo
        - removed use of deprecated Class::MOP::load_class (thanks, Karen
          Etheridge)

2.200004  2013-08-27 12:09:19 America/New_York
        - pass the arguments to missing_plugin in the right order

2.200003  2013-01-30 21:35:34 America/New_York
        - doc fixes (Thanks, George Hartzell!)

2.200002  2012-03-15 21:16:16 America/New_York
        - documentation fixes (Thanks, Gregor Herrmann of Debian!)

        - depend on at least version 0.17 of Class::Load, to work around a bug
          with perl5.8.8 and Module::Runtime 0.012. (Karen Etheridge)

2.200001  2011-02-11 11:13:20 America/New_York
        - when throwing "package not installed", add a "package" attribute to
          Error

2.200000  2011-02-08 11:05:12 America/New_York
        - add Config::MVP::Error for common exceptions

        - allow class loading and class-not-found handling to be subclassed
          (thanks, Kent Fredric!)

2.101650  2010-06-14 20:22:42 America/New_York
        - require Moose 0.91 for native trait support

2.101540  2010-06-03 00:28:57 America/New_York
        - improve if_none to return from the proper scope (i.e., now it works)

2.101480  2010-05-28 22:59:18 America/New_York
        - add an if_none callback to Reader::Finder; for now, private

2.101460  2010-05-26 22:29:43 America/New_York
          [BREAKS BACKWARD COMPATIBILITY]
